--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "meteor-node-stubs": "^0.3.2"
   }
