--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-runtime": "^6.26.0",
-    "meteor-node-stubs": "^0.3.2"
+    "handlebars-react": "0.0.16",
+    "meteor-node-stubs": "^0.3.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
